crates/nirvash-macros/tests/fixtures/derive_relational_state_invalid.rs
use nirvash_macros::RelationalState;

#[derive(RelationalState)]
enum InvalidState {
    Idle,
}

fn main() {}
